--- a/catalog/view/theme/my_theme/stylesheet/stylesheet.scss
+++ b/catalog/view/theme/my_theme/stylesheet/stylesheet.scss
@@ -101,6 +101,79 @@ nav#top {
 .owl-next {
   color: #01a0e4;
 }
-
+#content {
+  .product-layout {
+    margin-top: 30px;
+    >.product-thumb {
+      //для того чтобы при наведении элемент не менял размеры
+      border: 1px solid transparent;
+      transition: all .3s ease;
+      &:hover {
+        border: 1px solid #e6ebf7;
+        transform: scale(1.01);
+      }
+    }
+    .caption {
+      text-align: center;
+      p {
+        display: none;
+        .price-tax {
+          display: none;
+        }
+        &.price {
+          display: block;
+          font-size: 18px;
+          .price-old {
+            font-size: 1.3rem;
+            text-decoration: line-through;
+          }
+        }
+      }
+    }
+    //оформление элемента "акция" который добавлен через js
+    .stock {
+      position: absolute;
+      background-color: red;
+      color: whitesmoke;
+      font-size: 1.6rem;
+      padding: 8px;
+    }
+    .button-group {
+      button {
+        width: 100%;
+        height: 43px;
+        background-color: transparent;
+        border: 1px solid $main-color-darken;
+        color: $main-color;
+        border-radius: 6px;
+        transition: all .3s ease;
+        &:hover {
+          background-color: $main-color;
+          color: whitesmoke;
+        }
+      }
+      .button-toclick {
+        display: block;
+        width: 100%;
+        height: 43px;
+        margin-top: 5px;
+        border: 1px solid $main-color-darken;
+        border-radius: 6px;
+        color: $main-color;
+        text-align: center;
+        padding-top: 10px;
+        text-decoration: none;
+        transition: all .3s ease;
+        &:hover {
+          background-color: $main-color;
+          color: whitesmoke;
+        }
+      }
+      :not(:nth-of-type(1)) {
+        display: none;
+      }
+    }
+  }
+}
 
 @import "media";
