--- a/catalog/view/theme/my_theme/stylesheet/stylesheet.scss
+++ b/catalog/view/theme/my_theme/stylesheet/stylesheet.scss
@@ -101,7 +101,56 @@ nav#top {
 .owl-next {
   color: #01a0e4;
 }
+aside {
+  .list-group {
+    .list-group-item {
+      background-color: #eeeef9;
+      margin-top: 3px;
+      border-radius: 6px;
+      transition: all .3s ease;
+      &:hover {
+        background-color: $main-color;
+        color: whitesmoke;
+      }
+    }
+    .category {
+      margin-top: 110px;
+      margin-bottom: 30px;
+      color: $main-color-darken;
+      text-transform: uppercase;
+      text-align: left;
+      margin-left: 10px;
+      font-size: 1.8rem;
+      &::after {
+        content: "";
+        display: inline-block;
+        position: absolute;
+        width: 50px;
+        margin-left: 10px;
+        margin-top: 14px;
+        height: 2px;
+        background-color: $main-color-darken;
+      }
+      &::before {
+        content: "";
+        display: inline-block;
+        width: 50px;
+        height: 2px;
+        margin-right: 10px;
+        background-color: $main-color-darken;
+      }
+    }
+  }
+}
 #content {
+  h3 {
+    margin-top: 60px;
+    margin-bottom: 50px;
+    color: #41535b;
+    font-size: 2rem;
+    text-transform: uppercase;
+    text-align: center;
+  }
   .product-layout {
     margin-top: 30px;
     >.product-thumb {
@@ -109,8 +158,9 @@ nav#top {
       border: 1px solid transparent;
       transition: all .3s ease;
       &:hover {
-        border: 1px solid #e6ebf7;
         transform: scale(1.01);
+        box-shadow: 8px -2px 38px -1px rgba(228,227,230,1);
+        border-radius: 6px;
       }
     }
     .caption {
@@ -130,15 +180,35 @@ nav#top {
         }
       }
     }
-    //оформление элемента "акция" который добавлен через js
-    .stock {
+    .ribbon {
       position: absolute;
+      float: right;
+      top: 1px;
       background-color: red;
-      color: whitesmoke;
-      font-size: 1.6rem;
-      padding: 8px;
+      padding: 10px;
+      opacity: 0.8;
+      span {
+        display: block;
+        font-size: 14px;
+        color: whitesmoke;
+      }
+      .stock {
+        font-size: 18px !important;
+      }
     }
+    .image {
+      padding: 10px;
+    }
+    //оформление элемента "акция" который добавлен через js
+    //.stock {
+    //  position: absolute;
+    //  background-color: red;
+    //  color: whitesmoke;
+    //  font-size: 1.6rem;
+    //  padding: 8px;
+    //}
     .button-group {
+      padding: 10px;
       button {
         width: 100%;
         height: 43px;
