--- a/catalog/view/theme/my_theme/stylesheet/stylesheet.scss
+++ b/catalog/view/theme/my_theme/stylesheet/stylesheet.scss
@@ -199,10 +199,10 @@ aside {
     position: relative;
     margin-top: -40px;
     &:hover {
-      z-index: 5;
+      z-index: 3;
       .button-group {
         position: relative;
-        z-index: 5;
+        z-index: 3;
       }
     }
     >.product-thumb {
@@ -210,16 +210,40 @@ aside {
       border: 1px solid transparent;
       transition: all .3s ease;
       &:hover {
-        transform: scale(1.01);
-        box-shadow: 8px -2px 38px -1px rgba(228,227,230,1);
+        transform: scale(1.07);
         border-radius: 6px;
         .button-group {
           transform: scale(1);
         }
+        .caption {
+          color: whitesmoke;
+          a {
+            color: whitesmoke;
+          }
+        }
+        &::before {
+          display: block;
+        }
+        .description {
+          display: block;
+        }
+      }
+      &::before {
+        content: "";
+        display: none;
+        position: absolute;
+        border-radius: 8px;
+        height: 100%;
+        width: 100%;
+        opacity: 0.4;
+        z-index: 0;
+        background-color: #0f0f1b;
       }
     }
     .caption {
       text-align: center;
+      position: relative;
+      z-index: 2;
       p {
         display: none;
         .price-tax {
@@ -231,6 +255,21 @@ aside {
           .price-old {
             font-size: 1.3rem;
             text-decoration: line-through;
+          }
+        }
+      }
+      .description {
+        position: absolute;
+        top: -90px;
+        display: none;
+        ul {
+          li {
+            list-style: none;
+            text-decoration: none;
+            display: inline-block;
+            text-align: left;
+            color: whitesmoke;
+            font-size: 2rem;
           }
         }
       }
@@ -267,18 +306,20 @@ aside {
       display: block;
       bottom: 0;
       padding: 10px;
-      background-color: white;
+      border-radius: 8px;
+      background-color: #818181;
       button {
         width: 100%;
         height: 43px;
-        background-color: transparent;
-        border: 1px solid $main-color-darken;
+        background-color: whitesmoke;
+        border: 1px solid whitesmoke;
         color: $main-color-darken;
         border-radius: 50px;
         transition: all .3s ease;
         &:hover {
           background-color: $main-color-darken;
           color: whitesmoke;
+          border-color: $main-color-darken;
         }
       }
       .button-toclick {
@@ -286,9 +327,9 @@ aside {
         width: 100%;
         height: 43px;
         margin-top: 5px;
-        border: 1px solid $main-color-darken;
+        border: 1px solid whitesmoke;
         border-radius: 50px;
-        background-color: transparent;
+        background-color: whitesmoke;
         color: $main-color-darken;
         text-align: center;
         padding-top: 10px;
@@ -297,6 +338,7 @@ aside {
         &:hover {
           background-color: $main-color-darken;
           color: whitesmoke;
+          border-color: $main-color-darken;
         }
       }
       :not(:nth-of-type(1)) {
